# cpp-project-templates

./: .gitignore  README.org
basic-cmake-project/: CMakeLists.txt  Makefile  README.org  application1.cpp  application2.cpp  build_msvc.bat
basic-opengl-project/: CMakeLists.txt  README.org  opengl1.cpp
boost-asio-basic/: CMakeLists.txt  README.org  echo-server.cpp
command-line-app-cli11/: .gitignore  CMakeLists.txt  README.org  build.bat  main.cpp
python-module-pybind11/: CMakeLists.txt  Makefile  README.org  SampleModule.cpp  build.bat  test_script.py
qt5-qtquick-qml/: CMakeLists.txt  main.cpp  main.qml  textfilemodel.cpp  textfilemodel.hpp
qt5-qtwidgets-dynamically-loaded/: .gitignore  CMakeLists.txt  FormLoader.hpp  app.cpp  resources.qrc  user_interface.ui
wxwidgets/: CMakeLists.txt  Makefile  README.org  wx-build.dockerfile
wxwidgets/sampleApp/: wxwidgets_sampleApp.cpp  wxwidgets_sampleApp.h  wxwidgets_sampleMain.cpp  wxwidgets_sampleMain.h
wxwidgets/singleFileApp/: main.cpp
